# ansible-role-vastai_host

./: .coderabbit.yaml  .gitignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  FACTS.mmd  README.md  pyproject.toml  requirements-local.yml.j2
.devcontainer/: apt-packages.txt  devcontainer.json
.github/: AGENTS.md  README.md  copilot-instructions.md
.github/agents/: README.md
.github/prompts/: README.md  repository-setup.prompt.md
.github/skills/: README.md
.github/workflows/: AGENTS.md  README.md  claude.yml  cogni-ai-agent.yml  molecule.yml  opencode-review.yml  opencode.yml
.tours/: getting-started.tour
defaults/: main.yml
files/vast.ai/: AGENTS.md  README.md  commit_container.py  enable_vms.py  install.py  install_update.sh  list_container_ips.sh  purge_stale_cdi.py  read_packs.py  report_copy_success.py  send_mach_info.py  start_self_test.sh  sync_libvirt.sh  test_NCCL.py  test_nvml_error.sh  update_launcher.sh  update_scripts.sh  vast_fuse  vast_host_installer.py
meta/: main.yml
molecule/debian-local-daemon/: converge.yml  molecule.yml
molecule/debian-local-standalone/: converge.yml  molecule.yml
molecule/debian-native-placeholder/: converge.yml  molecule.yml
molecule/default/: converge.yml  create.yml  destroy.yml  mock_installer.py  prepare.yml  (+1 more)
scripts/: README.md  sync_all_scripts.sh
tasks/: Debian.yml  NixOS.yml  main.yml  verify.yml
templates/: AGENTS.md  environment.j2  host_ipaddr.j2  host_port_range.j2  vast_metrics.service.j2  vast_server.j2  vastai.service.j2  vastai_kaalia.cron.j2
tests/: test.yml
vars/: main.yml
(+66 files in other folders)
